--- a/video-player.html
+++ b/video-player.html
@@ -1410,6 +1410,38 @@
           "2": { link:'https://www.dropbox.com/scl/fi/26tc29rakiektix54c250/Shinsei-Kourin-Dacryon-Luna-Cap-2-Sub-Espa-ol.mp4?rlkey=jkn6gwjel0000ltimnfmxujok&st=60nwhwo9&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 2' },
         }
       },
+      "38": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/7it13qogxskpng3t33r7k/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-1.mp4?rlkey=t9g5f7113xwtyf6mbjembqtt7&st=fq09dxjk&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/mgnijca187lf973u9j60a/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-2.mp4?rlkey=4jz43pp0bcvj3l5a1be7dvzz5&st=o0znqhn8&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/sj88kktzaf8qx9ed7xljo/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-3.mp4?rlkey=wy69iuvlmh7x2js4j397agtk8&st=wnvaf59f&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/2itzs0vpwsc83ezq52ecc/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-4.mp4?rlkey=aeivlg67qog855fc8nrtayc9k&st=uj37k0xc&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/gi5bze5tdto8sqqmqgx2k/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-5.mp4?rlkey=adksi8p05lakvgfeup6s5dfll&st=nhjxi2ju&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/6nhcigx3bgzvmnevyfuvn/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-6.mp4?rlkey=4awiemograz7ybeqrdkc3zc39&st=olaqr8j9&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/26x81ampnuak28jjyfqnp/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-7.mp4?rlkey=ribx3p8xisak7f04rodx07s6p&st=x1rzd2li&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/hx262tp656vrgqqge6acz/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-8.mp4?rlkey=c16w2rs2xrqy7l6c7agt0yus1&st=db3vrdec&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/cwlsky34094gqngv37787/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-9.mp4?rlkey=z46bychyrzephlaips7xsrbxx&st=fxiogkp3&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/3lwj55rt0huifuq4ku4qq/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-10.mp4?rlkey=xova0khft3lf8yz5eqwigghc4&st=mi3zq9zm&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/snhwk0qqvmwwjcqr48ezz/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-11.mp4?rlkey=ywz1zal9jd5vuip992nai98ua&st=zslkil6m&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/1zmx9lswcsas0l4vzefso/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-12.mp4?rlkey=30wdnfrjh1dimvowabtatjfuq&st=tnj8bif1&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 12' },
+        }
+      },
+      "39": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/eanzirqj3bdlfq2b2b0or/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-1.mp4?rlkey=7mvdwl8885e7sqfkklgz6vb91&st=m6b46m4z&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/oupy2vbx7lglb9r3mcwrv/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-2.mp4?rlkey=gwzpb0b5lkn2f82987k2or99t&st=1gsdwyym&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/fam3xggazllkhx8bvoukc/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-3.mp4?rlkey=porva9g30uoajgk5mu8c1blbm&st=44vm29i8&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/l6js7r80fktoibccv5h5n/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-4.mp4?rlkey=v04jg4p66kcn7zg90kfhx2spa&st=bnpeggoi&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/2a5cwig01gk3y6me1rgct/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-5.mp4?rlkey=bfd4kzmdy0tjizm70pivnb98x&st=8std2ony&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/3vsn2xrjz389w2hclcke1/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-6.mp4?rlkey=8khb7gvemnyl98bdes9nd5o81&st=kjez41cz&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/i59kf0mn06sx54luy5kaw/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-7.mp4?rlkey=47bombg5t2g4wuakvu3jo0peo&st=h1v1ieue&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/fkdebrj207y9jxxm4ynar/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-8.mp4?rlkey=tm208y6o02zcoe4deoibvpbrp&st=6r19mmkz&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/0g4mekxk6obxqicysfurd/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-9.mp4?rlkey=2qv19e5kjv4s3zcyae1vzl16a&st=jlcejcfy&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/k4qb14wc99e5r6fcsvo67/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-10.mp4?rlkey=wr0o95te52au4o9v88ggtucyl&st=g09bd3g1&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/580afhv9dazfpymylm21b/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-11.mp4?rlkey=sf0ehgfkh9w7s52434sqc4kdg&st=36ydi6q9&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/9bpz0xsez77kac32spn8l/Ore-dake-Haireru-Kakushi-Dungeon-T1-Cap-12.mp4?rlkey=nwmxngz5gqvqzyyb0fdcue1nc&st=t15zwdpt&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 12' },
+        }
+      },
 
 
 
