--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2077,7 +2077,7 @@
       38: {
         title: "Kami-tachi ni Hirowareta Otoko",
         desc: "Ryoma no había tenido suerte en su vida previa. Pero tres deidades deciden darle una segunda oportunidad en un mundo de fantasía y magia.",
-        cover: "Gachiakuta.jpg",
+        cover: "Kamitachi.jpg",
         seasons: [
           {
             num: 1,
@@ -2102,7 +2102,7 @@
       39: {
         title: "Ore dake Haireru Kakushi Dungeon",
         desc: "Mazmorra Oculta es un lugar legendario repleto de tesoros y objetos muy poco comunes. Nor, el tercer hijo de una ahora en decencia familia noble y que ha perdido el único trabajo que tenía, tiene la suerte de escuchar hablar de esta mazmorra. Es entonces cuando adquiere una habilidad que le permite crear, usar y editar habilidades... y para poder usarla debe acumular puntos cumpliendo tareas como comer cosas deliciosas o dedicarse a hacer cosas eróticas a miembros del sexo opuesto.",
-        cover: "Gachiakuta.jpg",
+        cover: "oredake.jpg",
         seasons: [
           {
             num: 1,
