--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2096,6 +2096,24 @@
               { title: "Kami-tachi ni Hirowareta Otoko T1 Cap 11"},
               { title: "Kami-tachi ni Hirowareta Otoko T1 Cap 12"},
             ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/mh2a1yka1pwlhvvpr22h1/kamitachi2.jpg?rlkey=mpyq7ft571c9odi23rvfromfx&st=qxx9rdlr&raw=1",
+            eps: [
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 1"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 2"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 3"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 4"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 5"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 6"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 7"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 8"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 9"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 10"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 11"},
+              { title: "Kami-tachi ni Hirowareta Otoko T2 Cap 12"},
+            ]
           }
         ]
       },
