--- a/video-player.html
+++ b/video-player.html
@@ -837,8 +837,8 @@
           "7": { link:'https://www.dropbox.com/scl/fi/3941pm4ury4h8uy32pzs2/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-7.mp4?rlkey=2slgm2g96ludmwudfic6kz0mq&st=xttmwbnz&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/90e58n1aanwtcaowp9zlb/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-8.mp4?rlkey=i26dhb4a1rgblyvg1e7kmi51h&st=bwokt6ld&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/urwt2uoir4ykxk8at4n0y/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-9.mp4?rlkey=q4ug2eu1waazp4r2vpkopvx6f&st=fuhdxlue&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/spam75xphrw6y1tdn0s80/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-10.mp4?rlkey=bf8peymo2p94leittco7ed2w5&st=erpheq6a&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T1 Cap 10' },
-          "11": { link:'&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 11' },
+          "10": { link:'https://www.dropbox.com/scl/fi/spam75xphrw6y1tdn0s80/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-10.mp4?rlkey=bf8peymo2p94leittco7ed2w5&st=erpheq6a&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/vv9frwkxnropfx3g102kb/Reborn-as-a-Vending-Machine-I-Now-Wander-the-Dungeon-T2-Cap-11.mp4?rlkey=y7dmffaflyjt4b9tpnm8x8ytx&st=acovu8fb&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 11' },
           "12": { link:'&raw=1', title:'Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 12' },
         }
       },
@@ -972,7 +972,7 @@
           "8": { link:'https://www.dropbox.com/scl/fi/x2szllq3a63wg66l0jiug/The-Rising-of-the-Shield-Hero-T4-Cap-8.mp4?rlkey=31tvwnog476rk9ap81vl9seei&st=xyezq3pb&raw=1', title:'The Rising of the Shield Hero T4 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/ns9cj99y04i8asxbax08y/The-Rising-of-the-Shield-Hero-T4-Cap-9.mp4?rlkey=5ai9ztgc1vtaj4p8j58l2ef6a&st=iuzt9olk&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/budjdprik17b6e7em7237/The-Rising-of-the-Shield-Hero-T4-Cap-10.mp4?rlkey=i580tvqny0xjrmwwubnz5zkyf&st=hbud1d1t&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
-          "11": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 11' },
+          "11": { link:'https://www.dropbox.com/scl/fi/rq6sy77wobw3n6p9dw8r5/The-Rising-of-the-Shield-Hero-T4-Cap-11.mp4?rlkey=ivdkfje8czvs0tlndju08qpmx&st=09vum50u&raw=1', title:'The Rising of the Shield Hero T4 Cap 11' },
           "12": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 12' },
         }
       },
@@ -1372,7 +1372,7 @@
           "8": { link:'https://www.dropbox.com/scl/fi/m9zu8ffpjhmea4n8l7e2k/Tsuyokute-New-Saga-T1-Cap-8.mp4?rlkey=0qf8v5dgrt5jpmj142w7kref1&st=nw3f2zrh&raw=1', title:'Tsuyokute New Saga T1 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/u7fixhi1u75ah3jlqmyce/Tsuyokute-New-Saga-T1-Cap-9.mp4?rlkey=httfo53lg735dtc999lkfr84p&st=bh3smvlc&raw=1', title:'Tsuyokute New Saga T1 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/gpp70wi06x7vtt8qk2p7g/Tsuyokute-New-Saga-T1-Cap-10.mp4?rlkey=jasvv2so4s52daallrlwwtbgh&st=unzdkzkf&raw=1', title:'Tsuyokute New Saga T1 Cap 10' },
-          "11": { link:'&raw=1', title:'Tsuyokute New Saga T1 Cap 11' },
+          "11": { link:'https://www.dropbox.com/scl/fi/4lw4zmvjen7wigg3uw291/Tsuyokute-New-Saga-T1-Cap-11.mp4?rlkey=fo9bq0w2jaia0ia8jrhvhb8gl&st=n5yz5g3g&raw=1', title:'Tsuyokute New Saga T1 Cap 11' },
           "12": { link:'&raw=1', title:'Tsuyokute New Saga T1 Cap 12' },
         }
       },
@@ -1390,7 +1390,7 @@
           "10": { link:'https://www.dropbox.com/scl/fi/91keenqu12jqw6cfh9bfj/Gachiakuta-T1-Cap-10.mp4?rlkey=v9lekxt00096k0nf2dv736mpf&st=qy9wcyyv&raw=1', title:'Gachiakuta T1 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/7rwwa9o60kjt926c46pbl/Gachiakuta-T1-Cap-11.mp4?rlkey=a4sm3y8qncu9ta6qss26h6mr6&st=quzjnm7r&raw=1', title:'Gachiakuta T1 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/vp4weqxu3jkg4ad6y82oh/Gachiakuta-T1-Cap-12.mp4?rlkey=mwqkls4c79ub2khqs5xwpmhur&st=z4p1pt1w&raw=1', title:'Gachiakuta T1 Cap 12' },
-          "13": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
+          "13": { link:'https://www.dropbox.com/scl/fi/ne414qzca7utlcr3qd7bf/Gachiakuta-T1-Cap-13.mp4?rlkey=jdxsvj9u1wg2xw103j3goeeen&st=sm953xed&raw=1', title:'Gachiakuta T1 Cap 11' },
           "14": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
           "15": { link:'&raw=1', title:'Gachiakuta T1 Cap 11' },
           "16": { link:'&raw=1', title:'Gachiakuta T1 Cap 12' },
@@ -1424,6 +1424,20 @@
           "10": { link:'https://www.dropbox.com/scl/fi/3lwj55rt0huifuq4ku4qq/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-10.mp4?rlkey=xova0khft3lf8yz5eqwigghc4&st=mi3zq9zm&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/snhwk0qqvmwwjcqr48ezz/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-11.mp4?rlkey=ywz1zal9jd5vuip992nai98ua&st=zslkil6m&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/1zmx9lswcsas0l4vzefso/Kami-tachi-ni-Hirowareta-Otoko-T1-Cap-12.mp4?rlkey=30wdnfrjh1dimvowabtatjfuq&st=tnj8bif1&raw=1', title:'Kami-tachi ni Hirowareta Otoko T1 Cap 12' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/0qx2fx59dkot465vfywqf/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-1.mp4?rlkey=nzdpkttstqfdkxuq932xgaiby&st=wsmgje8f&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/sobntl64dm2eo44ef5ryy/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-2.mp4?rlkey=v6ok42s6rqoma04p5y3u0wm2a&st=7e9eolm2&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/y1csrwcf8f9ku9mlufmih/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-3.mp4?rlkey=isr6chccv32oi3b8shdpvdkqq&st=1xnp3fpc&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/hr4qe7up0ulctkf4axkq0/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-4.mp4?rlkey=p3d6ywbmwm4ifkfdi4n77ippe&st=t9qvmn0x&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/9vv7rnd97cz2zq0nsvblj/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-5.mp4?rlkey=spaz769aesd6dubfhexbam42v&st=4uvjz97b&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/l3j30kzewfrtv029zkelg/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-6.mp4?rlkey=36ga0yx4wczpdrwn0ofp045vz&st=e7ih4ib7&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/eqtqimato4c2phs7t8j74/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-7.mp4?rlkey=n8r3v9zeu8cszoj7ayazgjhwz&st=e930htcz&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/1wvmj8fmfwwiak20wlr8a/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-8.mp4?rlkey=ohpgi3nlqd8hfg6luqqu3mm9y&st=2ttkca9o&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/8cnibsntbjnalp7n63nrn/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-9.mp4?rlkey=lenn5j8e6c3owaxxmjalwfptg&st=heqjpkah&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/is8vw0u2w37e69jq2lccn/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-10.mp4?rlkey=dy9gmcfifx3ch6o90m9cghglc&st=zgaakmzv&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/k3urd1z3wp6tu2wc39gp7/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-11.mp4?rlkey=0zsovrj8rea381c88nscrjp52&st=y5x7fgip&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/a81grwewzchv59hf3vxay/Kami-tachi-ni-Hirowareta-Otoko-T2-Cap-12.mp4?rlkey=2v8q51rlortffc5syoc9umsqh&st=de0z0lnv&raw=1', title:'Kami-tachi ni Hirowareta Otoko T2 Cap 12' },
         }
       },
       "39": {
