--- a/anime-detail.html
+++ b/anime-detail.html
@@ -212,6 +212,7 @@
   <audio id="Shinsei Kourin-ost" loop><source src="https://www.dropbox.com/scl/fi/x8m4ib42z3wkzav2iljem/Ending-Shinsei-Kourin-Dacryon.mp3?rlkey=xdatk5v3lsmpf82ydscl0i9lc&st=1h30p4qk&raw=1" type="audio/mpeg"></audio>
   <audio id="Kamitachi-ost" loop><source src="https://www.dropbox.com/scl/fi/368qrxasxdvt2fqcvm6h6/Kami-Tachi-ni-Hirowareta-Otoko-OP-Azusa-Tadokoro-Yasashii-Sekai-Sub-Espa-ol-Romaji-English.mp3?rlkey=qcn4qt0txld3ge8lzcs46t15x&st=wq1yu1y8&raw=1" type="audio/mpeg"></audio>
   <audio id="Oredake-ost" loop><source src="https://www.dropbox.com/scl/fi/xmqp2paia6h97fkwa7h6b/Pyramid-Daigyakuten-by-Spira-Spica-Ore-dake-Haireru-Kakushi-Dungeon-Opening.mp3?rlkey=3s0aeay9delzf6gavjj4bjxih&st=ued84mx7&raw=1" type="audio/mpeg"></audio>
+  <audio id="OnePunch-ost" loop><source src="https://www.dropbox.com/scl/fi/hqjhazpztx23zcjffuh09/One-punch-man-The-Hero-OP-1-sub.-espa-ol-lyrics-letra.mp3?rlkey=z3bm1s9eoxzpcw3m6yslkhhl7&st=osh0hwc3&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2194,6 +2195,79 @@
           }
         ]
       },
+      40: {
+        title: "One Punch-Man",
+        desc: "Saitama comenzó a hacer de héroe por pura afición, y tras tres años de un durísimo entrenamiento consiguió tal nivel de fuerza que puede acabar con cualquier enemigo de un solo puñetazo. Ahora la vida emocionante que esperaba tener se ha convertido en una de tedio absoluto, pero ¿habrá alguien a su nivel entre todos los héroes del mundo? ¿Y un villano capaz de hacerle sombra?",
+        cover: "onepunch.jpg",
+        seasons: [
+          {
+            num: 1,
+	    name: "Ova 0",
+            cover: "https://www.dropbox.com/scl/fi/e90mvl54sx6as45mlwlfr/unnamed-1.jpg?rlkey=w5y5f5vipr6b97cqrke3zow2p&st=qjqrvo8v&raw=1",
+            eps: [
+              { title: "One Punch-Man OVA 0 - Road to Hero"},
+            ]
+          },
+          {
+            num: 2,
+	    name: "Temporada 1",
+            cover: "https://www.dropbox.com/scl/fi/gt6int1d0scu0qkbd2e79/onepunch1.jpg?rlkey=rd15zof6ij6uhkje9ckemlfw3&st=ps4vgrz6&raw=1",
+            eps: [
+              { title: "One Punch-Man T1 Cap 1"},
+              { title: "One Punch-Man T1 Especial 1 - Una sombra que se esconde muy cerca"},
+              { title: "One Punch-Man T1 Cap 2"},
+              { title: "One Punch-Man T1 Cap 3"},
+              { title: "One Punch-Man T1 Especial 2 - El discípulo que es extremadamente poco hablador"},
+              { title: "One Punch-Man T1 Cap 4"},
+              { title: "One Punch-Man T1 Cap 5"},
+              { title: "One Punch-Man T1 Especial 3 - El ninja demasiado complicado"},
+              { title: "One Punch-Man T1 Cap 6"},
+              { title: "One Punch-Man T1 Cap 7"},
+              { title: "One Punch-Man T1 Especial 4 - El excesivamente insistente Bang"},
+              { title: "One Punch-Man T1 Cap 8"},
+              { title: "One Punch-Man T1 Cap 9"},
+              { title: "One Punch-Man T1 Especial 5 - Las hermanas a las que les pasan muchas cosas"},
+              { title: "One Punch-Man T1 Cap 10"},
+              { title: "One Punch-Man T1 Cap 11"},
+              { title: "One Punch-Man T1 Cap 12"},
+              { title: "One Punch-Man T1 Especial 6 - El caso del asesinato que era demasiado imposible"},
+            ]
+          },
+          {
+            num: 3,
+	    name: "Temporada 2",
+            cover: "https://www.dropbox.com/scl/fi/xx302drnrqurqrj7eggdc/gsdgsdgsdg-1.jpg?rlkey=ee9b8kqmq7kdbef8tqr622d5j&st=9qw1ilb1&raw=1",
+            eps: [
+              { title: "One Punch-Man T2 Especial 1 - Saitama y los usuarios de habilidades mediocres"},
+              { title: "One Punch-Man T2 Especial 2 - Salir a pescar con hombres de mediana edad"},
+              { title: "One Punch-Man T2 Cap 1"},
+              { title: "One Punch-Man T2 Cap 2"},
+              { title: "One Punch-Man T2 Especial 3 - Genos y su pérdida de memoria"},
+              { title: "One Punch-Man T2 Especial 4 - Juego y rivales"},
+              { title: "One Punch-Man T2 Cap 3"},
+              { title: "One Punch-Man T2 Especial 5 - Prisionero Lindo-Lindo y los prisioneros escapados"},
+              { title: "One Punch-Man T2 Cap 4"},
+              { title: "One Punch-Man T2 Cap 5"},
+              { title: "One Punch-Man T2 Cap 6"},
+              { title: "One Punch-Man T2 Cap 7"},
+              { title: "One Punch-Man T2 Cap 8"},
+              { title: "One Punch-Man T2 Cap 9"},
+              { title: "One Punch-Man T2 Cap 10"},
+              { title: "One Punch-Man T2 Cap 11"},
+              { title: "One Punch-Man T2 Cap 12"},
+              { title: "One Punch-Man T2 Especial 6 - El caso de asesinato de Zombieman 2"},
+            ]
+          },
+          {
+            num: 4,
+	    name: "Temporada 3",
+            cover: "https://www.dropbox.com/scl/fi/1r0djgkxmptdfe2ltkbk1/onepunch3.jpg?rlkey=4e2i0r1cvl5ufsh5f41fa2sqm&st=woghk9gy&raw=1",
+            eps: [
+              { title: "One Punch-Man T3 Cap 1"},
+            ]
+          }
+        ]
+      },
 
     };
 
@@ -2376,6 +2450,7 @@
         37: ['Shinsei Kourin-ost'],
         38: ['Kamitachi-ost'],
         39: ['Oredake-ost']
+        40: ['OnePunch-ost'],
       };
 
       // (Opcional) Si quieres añadir más pistas a un anime, pon arrays con más ids:
