--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2449,7 +2449,7 @@
         36: ['Gachiakuta-ost'],
         37: ['Shinsei Kourin-ost'],
         38: ['Kamitachi-ost'],
-        39: ['Oredake-ost']
+        39: ['Oredake-ost'],
         40: ['OnePunch-ost'],
       };
 
