--- a/video-player.html
+++ b/video-player.html
@@ -1475,9 +1475,9 @@
           "12": { link:'https://www.dropbox.com/scl/fi/xa1w8hsxanu0d5tj8zf31/One-Punch-Man-T1-Cap-8.mp4?rlkey=tvzvtx6hbmjvp4r4h13l3c32w&st=qkmlhfph&raw=1', title:'One Punch-Man T1 Cap 8' },
           "13": { link:'https://www.dropbox.com/scl/fi/att96u59d8s3htpq5mhpm/One-Punch-Man-T1-Cap-9.mp4?rlkey=21vnej2pp0h5pvli2ugssx8qh&st=dxsy8wm2&raw=1', title:'One Punch-Man T1 Cap 9' },
           "14": { link:'https://www.dropbox.com/scl/fi/gozkhx8wguuo9tu7zal4i/One-Punch-Man-T1-Especial-5.mp4?rlkey=0kxumzcvtvig5saxjyazskltu&st=wdwzmbdi&raw=1', title:'One Punch-Man T1 Especial 5' },
-          "15": { link:'https://www.dropbox.com/scl/fi/uxooon6dpsdhxv87pjfhe/One-Punch-Man-T1-Cap-10.mp4?rlkey=oe5zbaqux3zsg84z8552f7rie&st=i6dgke4v&raw=1', title:'One Punch-Man T1 Cap 10' },
+          "15": { link:'https://www.dropbox.com/scl/fi/c1g1j1qm9w1fnnjg4rkfr/One-Punch-Man-T1-Cap-10.mp4?rlkey=kgzaqs9xl2deunve6x37su9b3&st=zwwkt8td&raw=1', title:'One Punch-Man T1 Cap 10' },
           "16": { link:'https://www.dropbox.com/scl/fi/bhgl3xozvbnnk4c160xqp/One-Punch-Man-T1-Cap-11.mp4?rlkey=2x0amkmz3cmjvgp8r40nnbn7n&st=4uy1e06a&raw=1', title:'One Punch-Man T1 Cap 11' },
-          "17": { link:'https://www.dropbox.com/scl/fi/cf7pwd9jjm9tuh938sccx/One-Punch-Man-T1-Cap-12.mp4?rlkey=jfflgvtz9013wp0vxbm52mlj1&st=dyde7wii&raw=1', title:'One Punch-Man T1 Cap 12' },
+          "17": { link:'https://www.dropbox.com/scl/fi/28xgbr2bmb8etywhymsa2/One-Punch-Man-T1-Cap-12.mp4?rlkey=05tnva24707tfu7uvztj3him3&st=5gm9g6hs&raw=1', title:'One Punch-Man T1 Cap 12' },
           "18": { link:'https://www.dropbox.com/scl/fi/9i0tafawr0lu0c7iccsbr/One-Punch-Man-T1-Especial-6.mp4?rlkey=ti8nbqnz0rtrx5arrav03707x&st=7hrl0yrx&raw=1', title:'One Punch-Man T1 Especial 6' },
         },
         "3": {
